--- a/TicTacToe/css/game.css
+++ b/TicTacToe/css/game.css
@@ -1,5 +1,5 @@
 h1 {
-    text-align: center;
+    margin: 0 0 20px 190px;
 }
 
 /*This container includes our table and our canvas.*/
@@ -23,7 +23,7 @@ td {
     /*This property changes the cursor to the index finger hand when we hover over td elements.*/
     cursor: pointer;
     /*This property sets our table border style.*/
-    border: 4px solid rgba(21, 255, 0, 0.8);
+    border: 4px solid rgba(252,169,3,.8);
     /*This property removes default padding.*/
     padding: 0px;
     width: 200px;
